<resources>
    <string name="app_name">Heiwan</string>

    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="community">Community</string>

    <string name="upcoming_feature">Up Coming Feature</string>

    <string name="text_label_email">Email</string>
    <string name="text_label_password">Password</string>
    <string name="text_label_name">Name</string>
    <string name="text_label_username">Username</string>
    <string name="text_label_description">Description</string>
    <string name="text_label_phone">Phone</string>
    <string name="text_label_price">Price</string>

    <string name="text_hint_password">Some Password</string>
    <string name="text_hint_email">Email@gmail.com</string>
    <string name="text_hint_username_here">Username Here</string>
    <string name="text_hint_animal_description">Animal Description</string>
    <string name="text_hint_price">Rp. x.xxx.xxx</string>

    <string name="text_don_t_have_an_account">Don\'t have an account?</string>
    <string name="text_already_have_an_account">Already have an account?</string>

    <string name="btn_text_login">Login</string>
    <string name="btn_text_register">Register</string>

    <string name="content_description_animal_image">animal image</string>
    <string name="content_description_login_illustration">login illustration</string>
    <string name="content_description_register_illustration">register illustration</string>
    <string name="content_description_chat_button">Image Button to chat with seller</string>
    <string name="content_description_no_data">Image no data</string>

    <string name="btn_text_edit">Edit</string>
    <string name="btn_text_logout">Logout</string>
    <string name="btn_text_change_photo">Change Photo</string>
    <string name="btn_text_upload_image">Upload Image</string>
    <string name="btn_text_change_image">Change Image</string>
    <string name="text_btn_update">Update</string>
    <string name="text_btn_add">Add</string>
    <string name="text_btn_my_store">My Store</string>

    <string name="text_value_phone">Phone : %1$s</string>
    <string name="btn_text_search">Search</string>
    <string name="result">Result</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="dummy_animal_name">Animal Name</string>
    <string name="dummy_user_name">Someone User</string>
    <string name="dummy_user_email">Someone@gmail.com</string>
    <string name="dummy_user_phone">08xx-xxxx-xxx</string>
    <string name="dummy_seller_name">Seller Name</string>
    <string name="dummy_seller_city">Seller City</string>
    <string name="dummy_animal_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget rutrum velit. Sed vel purus in nibh facilisis maximus sit amet vitae lectus. Mauris interdum et elit sed congue. Aliquam maximus pharetra maximus. Fusce semper velit augue, eget condimentum velit ornare sed. Nulla vel metus leo.</string>

    <string name="text_menu_delete">Delete</string>

    <string name="text_dialog_msg_delete">Are you sure you want to delete this product?</string>

    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>

    <string name="success">Success</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="fill_the_text_field">Please Fill The Text Field</string>

    <string name="choose_a_pic">Choose a Picture</string>
    <string name="camera_failed_msg">Did not get permissions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_features">Upcoming Features</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="theme_title">Theme</string>
    <string name="ok">OK</string>
    <string name="btn_text_update">Update</string>
    <string name="retry">Retry</string>
    <string name="scan">scan</string>
    <string name="result_of_image_recognition">Result of image recognition</string>

    <string name="empty_input">Animal %1$s is required</string>
    <string name="empty_image">Please insert the image file first</string>

    <string name="product_success_add">Product added successfully</string>
    <string name="product_failed_add">Failed to add product</string>

    <string name="product_success_update">Product updated successfully</string>
    <string name="product_failed_update">Failed to update product</string>

    <string name="product_success_delete">Product deleted successfully</string>
    <string name="product_failed_delete">Failed to delete product</string>
    <string name="no_product">There are no products\nthat you sell yet</string>
    <string name="edit_product">Edit Product</string>
    <string name="add_product">Add Product</string>
    <string name="failed_to_load_user_data">Failed to load user data</string>

</resources>